# gtk_global_menu_test

./: README.md  copyright  foreign_toplevel.c  foreign_toplevel.h  main.c  meson.build
